# c3-examples

./: README.md  hello.sbatch
jax-matmul/: data.txt  job.sbatch  pyproject.toml  train.py
