[project]
name = "jax-matmul"
version = "0.1.0"
description = "JAX matrix multiplication benchmark for C3 testing"
requires-python = ">=3.11"
dependencies = [
    "jax[cuda12]>=0.4.30",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
